--- a/ramd.yml
+++ b/ramd.yml
@@ -1,8 +1,8 @@
----
-- hosts: 172.16.0.113
+--
+- name: Create a directory
+  hosts: 172.16.0.202
   tasks:
-   - name: Create Directory
-     file:
-       path: ~/newDir1
-       mode: "0755"
-       state: directory
+    - name: Create a directory named "new_directory"
+      file:
+        path: /home/divya/test1
+        state: directory
