--- a/ramd.yml
+++ b/ramd.yml
@@ -1,8 +1,12 @@
---
-- name: Create a directory
+---
+- name: Create Directory
   hosts: 172.16.0.194
+  become: yes
   tasks:
-    - name: Create a directory named "new_directory"
+    - name: Create a directory
       file:
         path: /home/divya/test1
         state: directory
+        owner: divya
+        group: divya
+        mode: 0755
