--- a/ramd.yml
+++ b/ramd.yml
@@ -1,12 +1,12 @@
 ---
-- name: Create Directory
-  hosts: 172.16.0.113
-  become: yes
+- hosts: 172.16.0.113
   tasks:
-    - name: Create a directory
-      file:
-        path: /home/divya/ramd
-        state: directory
-        owner: divya
-        group: divya
-        mode: 0755
+  - name: Install Apache2
+    apt:
+      name: apache2
+      state: present
+  - name: Start Apache2
+    service:
+      name: apache2
+      state: started
+      enabled: yes
