--- a/ramd.yml
+++ b/ramd.yml
@@ -1,7 +1,11 @@
 ---
 - name: Install Nginx on Ubuntu
   hosts: 172.16.0.120
-  become: yes  # This is required to run commands with root privileges
+  become: yes
+  gather_facts: yes  # Ensure facts are gathered to determine the correct interpreter
+
+  vars:
+    ansible_python_interpreter: /usr/bin/python3  # Specify the Python 3 interpreter
 
   tasks:
     - name: Update APT package cache
@@ -14,4 +18,3 @@
         name: nginx
         state: present
       become: yes
-
